# natural-speech

./: .gitignore  Gemfile  README.md  _config.yml
icubrec/: CMakeLists.txt  DEMO.md  README.md  TUTORIAL.md  build_lm_wsj.sh  extract_feat.sh  prep_cmu_dict.sh  sys_dpdt.env
icubrec/common/: HTE.dnn.am  addlayer4.hed  addlayer5.hed  beam  chime.htkc  connect.hed  connect.tf.hed  fbanks.htkc  finetune.htkc  logic.htkc  mfcc_keith.htkc  mfcc_keith_uncompressed.htkc  pretrain.htkc  proto  timit.htkc  train_tf.htkc  wsj.htkc  wsj0_20k_extra_dict
icubrec/common/timit/: monophones0  monophones1
icubrec/dnn_training/: README.md
icubrec/dnn_training/htk/: chime.env  timit.env  train.sh  train_tut.sh  vocub.env  wsj0.env  wsj0_20k.env  wsj0_5k.env
icubrec/dnn_training/tf/: connect_HMM.py  integrate.sh  nndef.py  train.py
icubrec/gmm_training/: README.md  build_lm_wsj.sh  chime.env  sys_dpdt.env  train.sh  vocub.env  wsj0.env  wsj0_20k.env  wsj0_5k.env
icubrec/gmm_training/scripts/: RemovePrunedFiles.pl  WordsToDictionary.pl  align_mlf.sh  eval_mono.sh  flat_start.sh  prep_tied.sh  prep_tri.sh  template_hinit  train_mixup.sh  train_mono.sh  train_mono_timit.sh  train_tied.sh  train_tri.sh
icubrec/htk/: DEMO.md  README.md  build_lm_wsj.sh  extract_feat.sh  prep_cmu_dict.sh  words_vocub.mlf
icubrec/htk/common/: HTE.dnn.tut.am  addlayer6.hed  addlayer7.hed  basic.htkc  connect.tut.hed  cvn.cfg  fbanks_40.htkc  macros  mfcc_cantab.htkc  mfcc_keith_uncompressed.htkc  timit.htkc  timit.led  train.htkc
icubrec/htk/dnn_training/: README.md
icubrec/htk/gmm_training/: chime.env  train.sh  vocub.env
icubrec/htk/models/: README.md
icubrec/htk/scripts/: FixCMUDict.pl  MergeDict.pl  make_mlf.sh
icubrec/htk/yarp_decoding/: CMakeLists.txt  decoder_icub.lua  speechrec.xml  streamer_yarphear.lua
icubrec/kaldi/: README.md  ReadMe_Demo.txt
icubrec/kaldi/CommandRecognizer/: AMDNN.py  CR_wrapper.py  net_mtl.py  output_cleaner.py  write_on_output_port.py
icubrec/kaldi/Kaldi_file/: ReadMe  cmd.sh  decode_example_dnn.sh  decode_example_gmm.sh  feat_ext.sh  global_train_cmvn.scp  lda_feat_ext.sh  path.sh  src  tools  utils
icubrec/kaldi/VAD_DNN/: VAD.py  VAD_DNN.py  data
icubrec/kaldi/VAD_DNN_DELTA/: VAD.py  VAD_DNN.py
icubrec/kaldi/fbanksCreator/: audioToFbanks.py
icubrec/kaldi/pipeline/: CommandsRecognition_pipeline.py  VAD_pipeline.py  save_cleaner.sh  signal_handler.py
icubrec/kaldi/utils/: IndexableQueue.py  audio_re_sample.py  logfbank_fun.py
icubrec/models/: README.md
icubrec/offline_decoding/: README.md  test.sh
icubrec/scripts/: CreateChimeMLF.pl  CreateWSJMLF.pl  FixCMUDict.pl  ProcessNums.pl  WordsToDictionary.pl  eval_no_lat.sh  extract_feat.sh  make_mlf.sh  merge_mlf.sh  train_iter.sh
icubrec/yarp_decoding/: CMakeLists.txt  README.md  decoder_clean.lua  rctrld_yarphear.cpp  rctrld_yarphear_asr.cpp  sound_player.cpp  speechrec.xml  yarphear_decoder.lua
icubrec/yarp_decoding/HTKLib/: HANNet.c  HShell.c  MakefileCPU  MakefileNVCC
icubrec/yarp_decoding/HTKTools/: MakefileCPU  MakefileNVCC  decoder.cpp
icubrec/yarp_decoding/stream_audio/: .index.html.swo  (+1 more)
(+124 files in other folders)
